--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .result {
-    width: 490px;
+    width: 495px;
     height: 50px;
     border: 3px solid green;
     text-align: center;
@@ -23,6 +23,13 @@
     background-color: white;
     cursor: pointer;
 }
+
+.customOperationsBlock {
+    border: 3px solid green;
+    min-height: 100px;
+    min-width: 500px;
+}
+
 .buttons-block {
-    width: 490px;
+    width: 495px;
 }
